force-app/main/default/objects/Evony_Troop__c/Evony_Troop__c.object-meta.xml
<CustomObject>
    <description>Information about a single troop unit, like cost, attack, defense and etc.</description>
    <label>Troop</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Troop Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Troop</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>