force-app/main/default/objects/Evony_Troop__c/fields/FoodCost__c.field-meta.xml
<CustomField>
    <fullName>FoodCost__c</fullName>
    <description>Necessary food for training one troop.</description>
    <inlineHelpText>Necessary food for training one troop.</inlineHelpText>
    <label>Food Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>