force-app/main/default/objects/Evony_Troop__c/fields/LumberCost__c.field-meta.xml
<CustomField>
    <fullName>LumberCost__c</fullName>
    <description>Necessary lumber for training one troop.</description>
    <inlineHelpText>Necessary lumber for training one troop.</inlineHelpText>
    <label>Lumber Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>