force-app/main/default/objects/Evony_Troop__c/fields/OreCost__c.field-meta.xml
<CustomField>
    <fullName>OreCost__c</fullName>
    <description>Necessary Ore for training one troop.</description>
    <inlineHelpText>Necessary Ore for training one troop.</inlineHelpText>
    <label>Ore Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>