force-app/main/default/objects/Evony_Troop__c/fields/RecruitTime__c.field-meta.xml
<CustomField>
    <fullName>RecruitTime__c</fullName>
    <description>Recruit time for a single unit.</description>
    <inlineHelpText>Recruit time for a single unit.</inlineHelpText>
    <label>Recruit Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>