force-app/main/default/objects/Evony_Troop__c/fields/StoneCost__c.field-meta.xml
<CustomField>
    <fullName>StoneCost__c</fullName>
    <description>Necessary Stone for training one troop.</description>
    <inlineHelpText>Necessary Stone for training one troop.</inlineHelpText>
    <label>Stone Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>