force-app/main/default/objects/Evony_Troop__c/fields/TroopName__c.field-meta.xml
<CustomField>
    <fullName>TroopName__c</fullName>
    <formula>TEXT(Type__c) + &apos; T-&apos; + TEXT(Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Troop</label>
    <type>Text</type>
</CustomField>