force-app/main/default/objects/Evony_Troop__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Troop Type</description>
    <inlineHelpText>Troop Type</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Mounted</fullName>
            </value>
            <value>
                <fullName>Ranged</fullName>
            </value>
            <value>
                <fullName>Siege</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>